@@ -64,13 +64,12 @@ public class MainTest {
         String filePath = new File("").getAbsolutePath();
         try {
             for (int i = 1; i < 14; i++) {
-                String input = new String(Files.readAllBytes(Paths.get(String.format("%s/src/tn/%s.in", filePath, 900+i))), StandardCharsets.UTF_8);
-                String output = new String(Files.readAllBytes(Paths.get(String.format("%s/src/tn/%s.out", filePath, 900+i))), StandardCharsets.UTF_8);
+                String input = Files.readString(Paths.get(String.format("%s/src/tn/%s.in", filePath, 900+i)));
+                String output = Files.readString(Paths.get(String.format("%s/src/tn/%s.out", filePath, 900+i)));
                 list.add(new String[]{input, output});
             }
         } catch (IOException e) {
             e.printStackTrace();
-
         }
 
         return list;
